[project]
name = "db_service"
version = "0.1.0"
description = "Database service module for Ludoman community bots"
authors = [
  { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn",
  "sqlalchemy[asyncio]>=1.4",
  "aiomysql",
  "pydantic",
  "python-dotenv",
  "httpx",
  "pydantic-settings",
  "tenacity"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
